Post Comments Form: Fix 'Cancel reply' alignment

--- a/packages/block-library/src/post-comments-form/style.scss
+++ b/packages/block-library/src/post-comments-form/style.scss
@@ -67,4 +67,9 @@
 			margin-top: 0.35em;
 		}
 	}
+
+	.comment-reply-title {
+		display: flex;
+		justify-content: space-between;
+	}
 }
